# RoPOFL

./: .gitignore  README.md  RoPO_cifar100_block_sharded_200_clients.txt  fedavg_cifar100_block_sharded_200_clients.txt  setup.cfg
docs/: config.md  experiments.md
src/: attack_clients.py
src/configs/: config.yaml
src/configs/attacks/: label_shift.yaml
src/configs/dataset/: cifar100.yaml  food101.yaml  food101_to_download.yaml
src/configs/distribution/: sharded.yaml
src/configs/federated_method/: RoPO.yaml  ditto.yaml  fedamp.yaml  fedavg_gts.yaml  federated_clustering.yaml  fine_tuning.yaml  pfedme.yaml
src/configs/model/: lora_vit.yaml
src/federated_datasets/: dataset_download.py  federated_dataset.py  food101_dataset.py
src/federated_methods/RoPO/: ropo.py  ropo_client.py  ropo_server.py
src/federated_methods/ditto/: ditto.py
src/federated_methods/fedamp/: fedamp.py  fedamp_client.py  fedamp_server.py
src/federated_methods/fedavg/: fedavg.py
src/federated_methods/fedavg_gts/: fedavg_gts.py
src/federated_methods/federated_clustering/: federated_clustering.py  federated_clustering_client.py  federated_clustering_server.py
src/federated_methods/fedrep/: fedrep_client.py
src/federated_methods/fine_tuning/: __init__.py  fine_tuning.py  fine_tuning_client.py  fine_tuning_server.py
src/federated_methods/personalized/: attack_utils.py  client.py  fedavg.py  server.py  strategy.py
src/utils/: dataset_utils.py  logging_utils.py  model_utils.py  process_utils.py  utils.py
