[options]
packages = find:
install_requires =
    hydra-core==1.3.2
    opencv-python==4.11.0.86
    psutil==7.0.0
    pandas
    requests==2.32.3
    scikit-learn==1.6.1
    torchvision
    fastervit==1.0.0
    peft==0.18.0
    datasets==4.4.2
    tabulate==0.9.0
    fire
    fastervit
python_requires = >=3.8
[options.extras_require]